payas-server-core/src/graphql/validation.schemaless/snapshots/payas_server_core__graphql__validation__document_validator__tests__basic_mutation.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(mutation))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Mutation,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "createConcert",
                ),
                arguments: {
                    "data": Object(
                        {
                            Name(
                                "title",
                            ): String(
                                "Concert 1",
                            ),
                            Name(
                                "venue",
                            ): Object(
                                {
                                    Name(
                                        "id",
                                    ): Number(
                                        Number(
                                            1,
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
