payas-server-core/src/graphql/validation.schemaless/snapshots/payas_server_core__graphql__validation__document_validator__tests__composite_order_by_valid_implicit_array.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: "validator.validate(create_query_document(r#\"\n                query {\n                    concerts(orderBy: {title: DESC}) {\n                        id\n                    }\n                }\n            \"#))"
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concerts",
                ),
                arguments: {
                    "orderBy": Object(
                        {
                            Name(
                                "title",
                            ): Enum(
                                Name(
                                    "DESC",
                                ),
                            ),
                        },
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
