payas-server-core/src/graphql/validation.schemaless/snapshots/payas_server_core__graphql__validation__document_validator__tests__create_mutation_invalid_overly_nested_list_input.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: "validator.validate(create_query_document(r#\"\n                mutation {\n                    createConcerts(data: [[{title: \"Concert 1\", venue: {id: 1}}]]) {\n                        id\n                        title\n                    }\n                }\n            \"#))"
---
Err(
    InvalidArgumentType {
        argument_name: "data",
        expected_type: "ConcertCreationInput",
        actual_type: "[ConcertCreationInput]",
        pos: Pos(3:42),
    },
)
