payas-server-core/src/graphql/validation.schemaless/snapshots/payas_server_core__graphql__validation__document_validator__tests__stray_argument_invalid.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    StrayArguments(
        [
            "foo",
        ],
        "concert",
        Pos(3:21),
    ),
)
