payas-server-core/src/graphql/validation.schemaless/snapshots/payas_server_core__graphql__validation__document_validator__tests__unspecified_required_argument_invalid.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
assertion_line: 218
expression: "validator.validate(create_query_document(r#\"\n                query {\n                    concert { # id argument is required here\n                        id\n                        title\n                        venue {\n                            id\n                            name\n                        }\n                    }\n                }\n            \"#))"
---
Err(
    RequiredArgumentNotFound(
        "id",
        Pos(3:21),
    ),
)
